src/objects/SBQQ__ConfigurationAttribute__c.object
<CustomObject>
    <fields>
        <fullName>FeatureExternalId__c</fullName>
        <formula>SBQQ__Feature__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FeatureExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductExternalId__c</fullName>
        <formula>SBQQ__Product__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqma_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>CPQ External Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>